--- a/src/app/HiringManagement/hiring-dashboard/hiring-dashboard.component.html
+++ b/src/app/HiringManagement/hiring-dashboard/hiring-dashboard.component.html
@@ -1,4 +1,3 @@
-<p>hiring-dashboard works!</p>
  <!-- Begin page -->
  <div id="layout-wrapper">
 
@@ -54,12 +53,12 @@
                         <div class="d-flex profile-wrapper">
                             <!-- Nav tabs -->
                             <ul class="nav nav-pills animation-nav profile-nav gap-2 gap-lg-3 flex-grow-1 fs-12" role="tablist">
-                                <li class="nav-item" #jobRequestsTab (click)="setTab('tab1')">
+                                <li class="nav-item" (click)="setTab('tab1')">
                                     <a class="nav-link fs-14 font-type" data-bs-toggle="tab" href="#JobRequests" role="tab" [ngClass]="{'active':  user=='tab1'}">
                                         <i class="ri-briefcase-4-line d-inline-block d-md-none"></i> <span class="d-none d-md-inline-block">Hiring Request</span>
                                     </a>
                                 </li>
-                                <li class="nav-item" #applicationInfoTab (click)="setTab('tab2')">
+                                <li class="nav-item" (click)="setTab('tab2')">
                                     <a class="nav-link fs-14 font-type" data-bs-toggle="tab" href="#ApplicationInfo" role="tab" [ngClass]="{'active':  user=='tab2'}">
                                         <i class="ri-list-unordered d-inline-block d-md-none"></i> <span class="d-none d-md-inline-block">Internal Applicants</span>
                                     </a>
