--- a/src/app/PerformanceManagement/goal-progress-tracker/goal-progress-tracker.component.html
+++ b/src/app/PerformanceManagement/goal-progress-tracker/goal-progress-tracker.component.html
@@ -228,7 +228,7 @@
 
                                         <!--FOR HR ONLY-->
                                         <div class="row align-items-center gy-3">
-                                            <div class="col-sm" >
+                                            <div class="col-sm">
                                                 <div class="align-items-center d-flex ">
                                                     <div class="form-check form-check-info mb-2" *ngIf="this.category==0">
                                                         <input class="form-check-input" type="checkbox" id="formCheck10" value="1" (click)="markcheck()">
@@ -485,17 +485,22 @@
                     <!--END Goal Tracking Details -->
 
 
-                    <ng-container [ngSwitch]="backcate">
-                        <div *ngSwitchCase="0">
-                            <a [routerLink]="['/GoalSettingsNAnalyticsHR']" [queryParams]="{ user:'tab2' }"><button type="button" class="btn btn-orange btn-label right nexttab nexttab font-type text-white" style="height: 24px;float: right;"><i class="ri-arrow-go-back-line label-icon align-middle fs-16 ms-2"></i>Back</button></a>
-                          </div>
-                      <div *ngSwitchCase="1">
-                        <a [routerLink]="['/performance_management']" [queryParams]="{ user:'personal' }"><button type="button" class="btn btn-orange btn-label right nexttab nexttab font-type text-white" style="height: 24px;float: right;"><i class="ri-arrow-go-back-line label-icon align-middle fs-16 ms-2"></i>Back</button></a>
-                      </div>
-                      <div *ngSwitchCase="2">
-                        <a [routerLink]="['/performance_management']" [queryParams]="{ user:'team' }"><button type="button" class="btn btn-orange btn-label right nexttab nexttab font-type text-white" style="height: 24px;float: right;"><i class="ri-arrow-go-back-line label-icon align-middle fs-16 ms-2"></i>Back</button></a>
-                      </div>
-                    </ng-container>
+                    <div style="padding-bottom: 100px; float: right;">
+                        <ng-container [ngSwitch]="true">
+                            <div *ngSwitchCase="backcate==0 && category==0">
+                                <a [routerLink]="['/GoalSettingsNAnalyticsHR']" [queryParams]="{ user:'tab2' }"><button type="button" class="btn btn-orange btn-label right nexttab nexttab font-type text-white" ><i class="ri-arrow-go-back-line label-icon align-middle fs-16 ms-2"></i>Back</button></a>
+                            </div>
+                            <div *ngSwitchCase="backcate==1 && category==0">
+                                <a [routerLink]="['/GoalSettingsNAnalyticsHR']" [queryParams]="{ user:'tab2' }"><button type="button" class="btn btn-orange btn-label right nexttab nexttab font-type text-white" ><i class="ri-arrow-go-back-line label-icon align-middle fs-16 ms-2"></i>Back</button></a>
+                            </div>
+                            <div *ngSwitchCase="backcate==1 && (category==1||category==2)">
+                                <a [routerLink]="['/performance_management']" [queryParams]="{ user:'personal' }"><button type="button" class="btn btn-orange btn-label right nexttab nexttab font-type text-white"><i class="ri-arrow-go-back-line label-icon align-middle fs-16 ms-2"></i>Back</button></a>
+                            </div>
+                            <div *ngSwitchCase="backcate==2 && (category==1||category==2)">
+                                <a [routerLink]="['/performance_management']" [queryParams]="{ user:'team' }"><button type="button" class="btn btn-orange btn-label right nexttab nexttab font-type text-white" ><i class="ri-arrow-go-back-line label-icon align-middle fs-16 ms-2"></i>Back</button></a>
+                            </div>
+                        </ng-container>
+                    </div>
 
 
                     <!-- Reason Model-->
